--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,8 +31,9 @@
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <title>ParkMe</title>
+    <title>ParkNest</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
